[BUGFIX] Fix alignment for button "copy default content elements"
In the page module in the "languages" view, the alignment of the button
"copy default content elements" is off. The button needs some padding on
the left side.

This patch fixes this by adding a div which gets the padding. It also
replaces the br's in front of this button with CSS for spacing.

Resolves: #56636
Releases: 6.2
Reviewed-on: https://review.typo3.org/28214
Tested-by: Stefan Froemken
Tested-by: Sebastian Fischer
Tested-by: Wouter Wolters

--- a/typo3/sysext/t3skin/Resources/Public/Css/structure/module_web_page.css
+++ b/typo3/sysext/t3skin/Resources/Public/Css/structure/module_web_page.css
@@ -112,8 +112,13 @@ table.typo3-page-columnsMode img.c-divider {
 	margin: 10px 0 5px 0;
 }
 
-td.t3-gridCell div.t3-page-ce {
+td.t3-gridCell div.t3-page-ce,
+div.t3-page-lang-copyce {
 	padding: 1px 12px 0 12px;
+}
+
+div.t3-page-lang-copyce {
+	margin-top: 30px;
 }
 
 .t3-page-ce.active .t3-page-ce-body {
